import org.jetbrains.kotlin.gradle.dsl.JvmTarget
import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

buildscript {
	repositories {
		mavenCentral()
	}

	dependencies {
		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
	}
}

plugins {
	id "org.jetbrains.kotlin.jvm" version "$kotlinVersion"
	id "java"
}

repositories {
	mavenCentral()
	maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }

	//Downloads the dependencies JAR file from Mindustry releases; does not use any real repository. Surprisingly, this is the most reliable option.
	ivy {
		url = 'https://github.com/'
		patternLayout { artifact(
				(mindustryVersion == "latest" ? '/[organisation]/[module]/releases/[revision]/download/dependencies.jar' : //latest stable release
						mindustryVersion == "be" ? '/[organisation]/[module]/releases/download/master/[revision].jar' : //latest commit (BE)
								'/[organisation]/[module]/releases/download/[revision]/dependencies.jar')) //specific release
		}
		metadataSources { artifact() }

		content {
			if (mindustryVersion == "be") {
				//BE artifact version is always 'latest'
				includeVersion("Anuken", "MindustryBuilds", "latest")
			} else {
				includeVersion("Anuken", "Mindustry", mindustryVersion)
			}
		}
	}
}

java {
	targetCompatibility = JavaVersion.VERSION_17
	sourceCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"

	options.compilerArgs.addAll([
			"-Xlint:deprecation",
			"--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"
	])
}

tasks.withType(KotlinCompile).configureEach {
	compilerOptions.jvmTarget.set(JvmTarget.JVM_17)
}

dependencies {
	compileOnly mindustryVersion == "be" ? "Anuken:MindustryBuilds:latest" : "Anuken:Mindustry:$mindustryVersion"

	implementation "org.jetbrains:annotations:26.0.2"
	implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
	implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
	implementation "org.jetbrains.kotlin:kotlin-metadata-jvm:$kotlinVersion"

	implementation "org.ow2.asm:asm:$asmVersion"
	implementation "org.ow2.asm:asm-tree:$asmVersion"
	implementation "org.ow2.asm:asm-commons:$asmVersion"

	implementation "org.commonmark:commonmark:$commonmarkVersion"
	implementation "org.commonmark:commonmark-ext-gfm-tables:$commonmarkVersion"
	implementation "org.commonmark:commonmark-ext-gfm-strikethrough:$commonmarkVersion"
	implementation "org.commonmark:commonmark-ext-ins:$commonmarkVersion"
	implementation "org.commonmark:commonmark-ext-image-attributes:$commonmarkVersion"
}

jar {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE

	exclude "module-info.class"

	from {
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}
}
